package com.example.signalization.data

data class MarkAsDecidedRequest(
    val id: Int
)